<resources>
    <string name="app_name">Trailers</string>

    <string name="popular_menu">Popular</string>
    <string name="top_rated_menu">Top rated</string>
    <string name="now_playing_menu">Now Playing</string>
    <string name="upcoming_menu">Upcoming</string>
    <string name="popular_title">Popular Movies</string>
    <string name="top_rated_title">Top rated Movies</string>
    <string name="now_playing_title">Now Playing Movies</string>
    <string name="upcoming_title">Upcoming Movies</string>
    <string name="movie_fresh_channel" translatable="false">movie_fresh_channel</string>
    <string name="notification_title">Trailers Time</string>
    <string name="movie_fresh_channel_discription">Daily Movies Refresh Notification</string>
    <string name="movie_fresh_channel_name">Refresh Movies</string>
    <string name="movie_fresh_content">"Watch the latest Movie trailers "</string>
    <string name="movie_fresh_failed">Unable to refresh movies</string>
    <string name="slash_10">/10</string>
    <string name="star_content_description">star_image</string>
    <string name="search_menu">search</string>
</resources>
